Some new changes

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@
     @import "/dist/css/style.css";
 </style>
 
-<script>
+<script type="module">
     // Aquí puedes importar tu archivo JS principal
     import "/dist/js/bundle.min.js";
 </script>
