Working in header section

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,23 @@
-<header>
-    <li>oaslksasd</li>
-    <li>oaslksasd</li>
-    <li>oaslksasd</li>
-    <li>oaslksasd</li>
-    <li>oaslksasd</li>
+<header class="header">
+    <div class="barra">
+        <div class="barra__contenido">
+            <a href="/">
+                <div class="barra__logo">
+                    <picture>
+                        <source srcset="/public/img/logo-04.avif" type="Image/avif">
+                        <source srcset="/public/img/logo-04.webp" type="Image/webp">
+                        <img loading="lazy" src="/public/img/logo-04.png" width="100" height="100" alt="Imágen ReMeNic">
+                    </picture>
+                </div>
+            </a>
+            <div class="barra__contenido logo-texto">
+                <p class="logo-texto-r">Registro Medico de Nicaragua</p>
+            </div>
+            <nav class="navegacion">
+                <a href="/paquetes" class="navegacion__enlace">Administrar</a>
+                <a href="/workshops-conferencias" class="navegacion__enlace">Registro</a>
+                <a href="/registro" class="navegacion__enlace ">Iniciar Sesión</a>
+            </nav>
+        </div>
+    </div>
 </header>
