--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -13,6 +13,7 @@ $secundario: #00c8c2;
 
 $negro: #1a1b15;
 $blanco: #FFFFFF;
+$blanco-suave:#e7e6e1;
 $gris: #64748B;
 $gris-claro: #F8FAFC;
 $gris-oscuro: #1E293B;
@@ -24,4 +25,4 @@ $verde: #02db02;
 $delgada: 300;
 $regular: 400;
 $bold: 700;
-$black: 900
+$black: 900;
